[Fix] Alignment on smaller devices

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
+  background-image: linear-gradient(45deg, #5682be 8%, #9455a6);
   background-color: #5682be;
-  background-image: linear-gradient(135deg, #5682be 8%, #9455a6);
   font-family: 'Roboto', sans-serif;
 
   width: 100%;
@@ -8,12 +8,13 @@ html {
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  max-height: 100vh;
-  max-height: 100dvh;
+  height: fit-content;
+  min-height: 100vh;
+  min-height: 100dvh;
 
   margin: 0;
+  padding-block: 3em 2em;
+  padding-inline: 1.5em;
 
   display: flex;
   flex-direction: column;
@@ -21,7 +22,6 @@ body {
 
   gap: 2em;
 
-  background-color: #5682be;
   background-image: linear-gradient(135deg, #5682be 8%, #9455a6);
 }
 
@@ -33,7 +33,6 @@ header > p {
 
   margin: 0;
   margin-inline: auto;
-  padding-inline: 2rem;
 
   color: white;
 }
